--- a/index.html
+++ b/index.html
@@ -6,20 +6,25 @@
     <title>Document</title>
     </head>
     <body>
-    <h1>About Me</h1>
+    <h1>Jasmine Wu</h1>
     <h3>a student who really shouldnt be going to siths</h3>
-    <p></p>
-    <ul>
-    <h4>lol</h4>
-        <li>yo mama</li>
-        <li>yo mama</li>
-        <li>yo mama</li>
-        <li>yo mama</li>
-        <li>yo mama</li>
-        <li>yo mama</li>
-    <p>listen to this banger</p>
-    <a href=""></a>
-    <picture></picture>
+    <p>A copypasta is a block of text copied and pasted to the internet and social media, containing controversial ideas or lengthy rants are often posted for humorous purposes, 
+    to provoke reactions from those unaware that the posted text is a meme.</p>
+    <p>
+    <h4>idk...</h4>
+        <li>volleyball>></li>
+        <li>my favorite subject is english</li>
+        <li>ok!</li>
+<p>my favorite days of the week</p>
+        <li>1. saturday</li>
+        <li>2. saturday</li>
+        <li>3. friday</li>
+    <p>everything in this website is true</p>
+    <ul><a href="https://www.iamawesome.com/">fr so true omg</a></ul>
+    <picture>
+        <source srcset="https://blog.cvcavets.com/hubfs/9.jpg" media="(orientation: portrait)" />
+        <img src="https://blog.cvcavets.com/hubfs/9.jpg" alt="" />
+      </picture>
     
 </body>
 </html>
